[gd_scene load_steps=13 format=3 uid="uid://b6hm5mv4x2n7f"]

[ext_resource type="PackedScene" uid="uid://cgerfy3y3klhk" path="res://map/map.tscn" id="1_2262g"]
[ext_resource type="Script" uid="uid://5td4ffqk5up" path="res://levels/main.gd" id="1_l8qe7"]
[ext_resource type="Texture2D" uid="uid://cyh2q6jkvokjn" path="res://map/map_data/ProvinceMap.bmp" id="2_m1504"]
[ext_resource type="PackedScene" uid="uid://c8ptbx1watnwc" path="res://player/player.tscn" id="2_wdj6m"]
[ext_resource type="Script" uid="uid://dfmvdnkedph4g" path="res://scripts/country_importer.gd" id="5_6et1j"]
[ext_resource type="Script" uid="uid://c4vggacrty230" path="res://scripts/province_importer.gd" id="5_ifaiv"]
[ext_resource type="PackedScene" uid="uid://5arm34pep1aj" path="res://ui/province_selected.tscn" id="6_5k4jt"]
[ext_resource type="Script" uid="uid://cop0wv5f1ngy0" path="res://scripts/state_importer.gd" id="6_qy63d"]
[ext_resource type="PackedScene" uid="uid://cdy1220h7wcq3" path="res://ui/map_modes.tscn" id="9_etqu2"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_wdj6m"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_l8qe7"]
sky_material = SubResource("ProceduralSkyMaterial_wdj6m")

[sub_resource type="Environment" id="Environment_m1504"]
background_mode = 2
sky = SubResource("Sky_l8qe7")
tonemap_mode = 2
glow_enabled = true

[node name="Main" type="Node3D"]
script = ExtResource("1_l8qe7")
province_map = ExtResource("2_m1504")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_m1504")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("2_wdj6m")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 298.085, -50, 35.765)
camera_move_speed = 10.0
camera_zoom_speed = 100.0
camera_zoom_min = 5.0
camera_zoom_max = 150.0
camera_zoom_speed_damp = 0.8

[node name="Countries" type="Node" parent="."]
script = ExtResource("5_6et1j")

[node name="Provinces" type="Node" parent="."]
script = ExtResource("5_ifaiv")

[node name="States" type="Node" parent="."]
script = ExtResource("6_qy63d")

[node name="Map" parent="." instance=ExtResource("1_2262g")]

[node name="ProvinceSelected" parent="." instance=ExtResource("6_5k4jt")]

[node name="MapModes" parent="." instance=ExtResource("9_etqu2")]

[connection signal="province_selected" from="Player" to="." method="_on_player_province_selected"]
[connection signal="reparent_provinces" from="States" to="." method="_on_states_reparent_provinces"]
[connection signal="save_provinces" from="ProvinceSelected" to="Provinces" method="_on_province_selected_save_provinces"]
[connection signal="map_mode_selected" from="MapModes" to="Map" method="_on_map_modes_map_mode_selected"]
